<resources>
    <string name="app_name" translatable="false">Promise</string>

    <string name="time_held">Time held:</string>
    <string name="promise_text">Promise text</string>
    <string name="streak_number">5</string>
    <string name="days_in_a_row">Days in a row!</string>
    <string name="settings">Settings</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="violations">Violations: %d</string>
    <string name="keep_from">Keeping from\n%1$d %2$s %3$d %4$s %5$d %6$s</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>

    <string name="i_promise_to">I promise to</string>
    <string name="task_text_hint">Stop smoking</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Promise!</string>
    <string name="starting">Starting</string>
    <string name="right_now">right now</string>
    <string name="time_to_start_your_new_life">Time to start your new life!</string>
    <string name="no_streak">0</string>
    <string name="in_a_row">In a row!</string>
    <string name="no_streak_description">But keep trying!</string>

    <string name="streak_less_than_week">"Days\nStreak: Less than a week\nGood start!"</string>
    <string name="streak_less_than_month">"Days\nStreak: Less than a month\nKeep going!"</string>
    <string name="streak_less_than_year">"Days\nStreak: Less than a year\nMake it 365!"</string>
    <string name="streak_over_year">"Days\nStreak: Over a year\nYou are truly strong! Do not break it!"</string>

    <string name="reset_timer">Reset Timer?</string>
    <string name="do_you_want_to_reset_the_timer_for_this_promise">Do you want to reset the timer for this promise?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_promise">Delete Promise?</string>
    <string name="are_you_sure_you_want_to_delete_this_promise">Are you sure you want to delete this promise?</string>
    <string name="promise_deleted">Promise deleted</string>
    <string name="undo">Undo</string>
    <string name="fill_your_promise">Fill your promise!</string>
    <string name="keeping">Keeping from</string>
    <string name="save">Save</string>
    <string name="English" translatable="false">English</string>
    <string name="Russian" translatable="false">Русский</string>
    <string name="change_theme">Change theme</string>
    <string name="delete_all_promises">Delete all promises</string>
    <string name="change_language">Change language</string>
    <string name="all_promises_deleted">All promises have been deleted.</string>
    <string name="theme_changed">Theme changed</string>
    <string name="current_streak">Current Streak</string>
    <string name="_0_days">0 days</string>
    <string name="longest_streak">Longest Streak</string>
    <string name="profile">Profile</string>

    <string name="most_challenging_promise">Most Challenging Promise</string>

    <string name="total_violations">Total Violations</string>
    <string name="_0">0</string>
    <string name="promise">Promise: %1$s</string>
    <string name="violations_2">Violations: %1$s</string>
    <string name="your_stats">Your stats</string>
    <string name="are_you_sure_you_want_to_delete_all_promises">Are you sure you want to delete all promises?</string>

    <string name="days_">%1$d days</string>
    <string name="violations_">Violations: %1$d</string>
    <string name="violations_count_">%1$d</string>
    <string name="promise_none">Promise: None</string>

    <!-- Defaults -->
    <string name="default_days">0 days</string>
    <string name="default_violations">Violations: 0</string>
    <string name="default_violations_count">0</string>

</resources>