<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/colorSurface">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <!-- Title -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
            android:background="@drawable/rounded_button_background"
            android:clickable="true"
            android:contentDescription="@string/settings"
            android:foregroundGravity="fill"
            android:foreground="?attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="32dp"
            android:text="@string/your_stats"
            android:textColor="?android:textColorPrimary"
            android:textSize="52sp"
            android:textStyle="bold" />

        <!-- Current Streak -->
        <TextView
            android:id="@+id/current_streak_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_streak"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="?android:textColorSecondary"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/current_streak_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_days"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"
            android:paddingBottom="20dp"/>
        <TextView
            android:id="@+id/current_violations_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/violations"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"
            android:paddingBottom="32dp"/>

        <!-- Longest Streak -->
        <TextView
            android:id="@+id/longest_streak_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longest_streak"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="?android:textColorSecondary"/>

        <TextView
            android:id="@+id/longest_streak_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_days"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"
            android:paddingBottom="32dp" />

        <!-- Most Challenging Promise -->
        <TextView
            android:id="@+id/most_challenging_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_challenging_promise"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="?android:textColorSecondary"/>

        <TextView
            android:id="@+id/most_challenging_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promise_none"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="?android:textColorPrimary"/>

        <TextView
            android:id="@+id/most_challenging_violations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/violations"
            android:textSize="20sp"
            android:textColor="?android:textColorPrimary"
            android:paddingBottom="32dp" />

        <!-- Total Violations -->
        <TextView
            android:id="@+id/total_violations_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_violations"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="?android:textColorSecondary"/>

        <TextView
            android:id="@+id/total_violations_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"
            android:paddingBottom="16dp" />
    </LinearLayout>
</ScrollView>
