<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/i_promise_to"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/task_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/task_text_hint"
        android:background="@drawable/rectangle_smooth"
        android:hint="@string/task_text_hint"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <LinearLayout
        android:id="@+id/date_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:clipToPadding="false"
        android:orientation="horizontal"
        android:outlineProvider="background"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_text_edit">

        <TextView
            android:id="@+id/textDate_starting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/keeping"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textDate_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="fill"
            android:padding="10dp"
            android:text="@string/right_now"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_Streak_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/keep_from"
        android:textColor="?android:textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_choose" />
    <TextView
        android:id="@+id/text_violations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/violations"
        android:textColor="?android:textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Streak_days" />


    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:outlineProvider="background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorSurface"
            android:outlineProvider="none"
            android:text="@string/cancel"
            android:textColor="?attr/colorOnSurface"
            android:textSize="20sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/confirm_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorSurface"
            android:foregroundGravity="bottom"
            android:outlineProvider="none"
            android:text="@string/save"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            app:cornerRadius="0dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>