<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="?attr/colorSurface"
    android:foreground="?attr/selectableItemBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/promiseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promise_text"
            android:textSize="25sp"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/timeHeldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_held"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/violationsCountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/violations"
            android:textSize="16sp"
            android:layout_marginTop="4dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
